--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.profiles.active=dev
 
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+default.sender=jacksondanielson123@gmail.com
+default.recipient=jacksondanielson123@gmail.com
