--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=mysql://b3423af7318575:e1547947@us-cdbr-iron-east-01.cleardb.net/heroku_f355439aaa59912?reconnect=true
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
